fix image stretching

--- a/innerpages/assets/css/innerpages.css
+++ b/innerpages/assets/css/innerpages.css
@@ -223,6 +223,13 @@ h5,h3,h6{
       object-fit: fill;
       display: inherit;
     } 
+    .img-fit{
+      width: 100%;
+      height: 100%;
+      -o-object-fit: fit;
+      object-fit: fit;
+      display: inherit;
+    }
     .custom-img-size {
       width: 100%; /* ensures the image is responsive */
       max-width: 400px; /* limits the maximum width */
